# be

./: .coveragerc  .env.dev  .env.test  .gitignore  .pylintrc  .sample.env  .test.env  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini  serverless.yml
.github/: reviewer-lottery.yml
.github/workflows/: cd-dev.yml  cd-prod.yml  choose-pr-reviewer.yml  ci.yml  deploy-prod.yml  test.yml
.serverless/: requirements.txt
be/: app.py  docs.py  docs_generate.py  main.py  root.py
be/api/v1/: router.py
be/api/v1/cron/: expire_unpaid_orders.py
be/api/v1/db/: products.py
be/api/v1/endpoints/: users.py
be/api/v1/endpoints/cart/checkout/: post.py  post_test.py
be/api/v1/endpoints/cart/quotation/: get.py  get_test.py  post.py  post_test.py
be/api/v1/endpoints/checkout/: post.py  post_test.py
be/api/v1/endpoints/orders/: get.py  get_test.py
be/api/v1/endpoints/payments/intent/: post.py  post_test.py
be/api/v1/endpoints/posts/: delete.py  delete_test.py  get.py  get_test.py  patch.py  patch_test.py  post.py  post_test.py
be/api/v1/endpoints/product_categories/: conftest.py  delete.py  delete_test.py  get.py  get_test.py  post.py  post_test.py  post_test_disabled.py  test_utils.py
be/api/v1/endpoints/products/: data.py  get.py  get_test.py
be/api/v1/endpoints/users/: get.py  get_test.py
be/api/v1/fixtures/: post_data.py
be/api/v1/models/: cart.py  order_hold_entry.py  orders.py  posts.py  product.py  product_category.py
be/api/v1/templates/: authRoute.py  auth_route.py  nonAuthRoute.py  non_auth_route.py
be/api/v1/utils/: cart_utils.py
be/auth/v1/: pre_sign_up.py  pre_sign_up_test.py
be/secrets/: secrets.yml
docs_server/swagger/: swagger-initializer.js  swagger-ui-bundle.js  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle.js  swagger-ui.js
docs_server/swagger/.vercel/: project.json
patches/: serverless-python-requirements+5.3.1.patch
utils/: test_app.py
utils/aws/: dynamodb.py
utils/dal/: order.py  order_hold.py  product_categories.py  products.py
