[tool.poetry]
name = "be"
version = "0.1.0"
description = "Serverless backend"
authors = ["NTU SCSE Club <cse-it@e.ntu.edu.sg>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
mangum = "^0.12.3"
boto3 = "^1.20.46"
fastapi = "^0.73.0"
pytest = "^6.2.5"
requests = "^2.27.1"
pytest-watch = "^4.2.0"
pylint = "^2.13.9"
pre-commit = "^2.19.0"
black = "^22.3.0"
moto = "^3.1.11"
pytest-dotenv = "^0.5.2"
pytest-serverless = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = [
    '.env',
    '.test.env',
]