[tool.poetry]
name = "be"
version = "0.1.0"
description = "Serverless backend"
authors = ["NTU SCSE Club <cse-it@e.ntu.edu.sg>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
mangum = "^0.12.3"
boto3 = "^1.20.46"
fastapi = "^0.73.0"
requests = "^2.27.1"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
stripe = "^4.1.0"
botocore = "^1.27.70"
pytest-mock = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
pytest = "^6.2.5"
pytest-dotenv = "^0.5.2"
pytest-serverless = "^1.0.0"
pytest-watch = "^4.2.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"